--- a/Project.ipynb
+++ b/Project.ipynb
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "82ec4133-f7d5-45cc-a533-1e8e25ae921c",
    "metadata": {},
    "outputs": [
@@ -731,27 +731,26 @@
      "text": [
       "Warning message in file(path):\n",
       "“'raw = FALSE' but '/home/jovyan/work/dsci_21/data' is not a regular file”\n",
-      "Warning message in open.connection(structure(4L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x25e>), :\n",
+      "Warning message in open.connection(structure(5L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x299>), :\n",
       "“cannot open file '/home/jovyan/work/dsci_21/data': Is a directory”\n"
      ]
     },
     {
      "ename": "ERROR",
-     "evalue": "Error in open.connection(structure(4L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x25e>), : cannot open the connection\n",
+     "evalue": "Error in open.connection(structure(5L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x299>), : cannot open the connection\n",
      "output_type": "error",
      "traceback": [
-      "Error in open.connection(structure(4L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x25e>), : cannot open the connection\nTraceback:\n",
-      "1. write_csv(data_set, \"dsci_21/data\")",
-      "2. write_delim(x, file, delim = \",\", na = na, append = append, col_names = col_names, \n .     quote = quote, escape = escape, eol = eol, num_threads = num_threads, \n .     progress = progress)",
-      "3. vroom::vroom_write(x, file, delim = delim, col_names = col_names, \n .     append = append, na = na, eol = eol, quote = quote, escape = escape, \n .     num_threads = num_threads, progress = progress)",
-      "4. vroom_write_connection_(x, file, delim, eol, na_str = na, col_names = col_names, \n .     options = opts, num_threads = num_threads, progress = progress, \n .     buf_lines = buf_lines, is_stdout = file == stdout(), append = append)",
-      "5. (function (con, ...) \n . UseMethod(\"open\"))(structure(4L, class = c(\"file\", \"connection\"\n . ), conn_id = <pointer: 0x25e>), \"wb\")",
-      "6. open.connection(structure(4L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x25e>), \n .     \"wb\")"
+      "Error in open.connection(structure(5L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x299>), : cannot open the connection\nTraceback:\n",
+      "1. write_delim(data_set, file = \"dsci_21/data\")",
+      "2. vroom::vroom_write(x, file, delim = delim, col_names = col_names, \n .     append = append, na = na, eol = eol, quote = quote, escape = escape, \n .     num_threads = num_threads, progress = progress)",
+      "3. vroom_write_connection_(x, file, delim, eol, na_str = na, col_names = col_names, \n .     options = opts, num_threads = num_threads, progress = progress, \n .     buf_lines = buf_lines, is_stdout = file == stdout(), append = append)",
+      "4. (function (con, ...) \n . UseMethod(\"open\"))(structure(5L, class = c(\"file\", \"connection\"\n . ), conn_id = <pointer: 0x299>), \"wb\")",
+      "5. open.connection(structure(5L, class = c(\"file\", \"connection\"), conn_id = <pointer: 0x299>), \n .     \"wb\")"
      ]
     }
    ],
    "source": [
-    "write_csv(data_set, \"dsci_21/data\")"
+    "write_delim(data_set, file = \"dsci_21/data\")"
    ]
   },
   {
