Final Group Proposal
Just added some comments

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3103,7 +3103,9 @@
    "id": "69e536f2-4fa0-47d2-80dc-4a59b45751ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### A quick look at this summary table back our in"
+   ]
   },
   {
    "cell_type": "code",
