For real final this time

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3098,13 +3098,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69e536f2-4fa0-47d2-80dc-4a59b45751ef",
+   "cell_type": "markdown",
+   "id": "3af46d82-a3bd-4020-9b6b-9acc5e2b2cda",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "### A quick look at this summary table back our in"
+    "### A quick look at this summary table confirms our visualisation and suggests that we can clearly classify UNS based on STG and SCG. "
    ]
   },
   {
