--- a/Project.ipynb
+++ b/Project.ipynb
@@ -9,6 +9,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f789bebe-6906-47a0-94a7-a72b98a4d9e6",
+   "metadata": {},
+   "source": [
+    "<u>DSCI 100 Group Proposal</u>\n",
+    "\n",
+    "**Group 21**\n",
+    "**Members:**\n",
+    "- Krishaant Pathmanathan\n",
+    "- Amy Cao\n",
+    "- Lin Wang\n",
+    "- Sana Jalali\n",
+    "\n",
+    "[GitHub Repo](https://github.com/amyxcao/dsci_21/blob/main/Project.ipynb)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Finding User Knowledge Level**\n",
+    "\n",
+    "**Introduction:**\n",
+    "As university students, many individuals struggle to find the right study schedule. Many students end up failing courses due to poor time management and not realizing the workload that comes with tasks. Knowing one’s knowledge levels would be a good indicator of how to approach studying and making better decisions with time management. According to psychologist Miriam Romero, fluid intelligence indicates a positive relation between time management and fluid intelligence [(Romero, 2023)](https://link.springer.com/article/10.1007/s12646-023-00764-0).\n",
+    "\n",
+    "The question we want answered is how can we classify user knowledge levels using time spent studying and an individual’s performance on a test? The dataset chosen is called, “User Knowledge Modeling” from the UCI Machine Learning Repository. This dataset uses students’ knowledge status about the subject of DC Machines.\n",
+    "\n",
+    "**Preliminary exploratory data analysis:**\n",
+    "\n",
+    "\n",
+    "We tried plotting performance for goals and related goals against studying efforts - time and repetition. We looked for potential patterns, clusters, like the one above. This is further explained below.\n",
+    "\n",
+    "**Methods:**\n",
+    "\n",
+    "\n",
+    "We plan to identify User Knowledge Level based on the degree of study time for goal object materials (STG) and the exam performance of the user for goal object (PEG). The method to find this is to load the Excel training data and select only our data columns, the first six columns. Then, we will plot the STG against the PEG they got with a scatter plot to visualize the data and distances. We will use the kknn classification model and select test scores and time spent studying as predictors to predict the User Knowledge level of the user using the training set. Then, we will analyze our result, tune it using the cross-validation method and parameter value selection, and finally use the tuned model on the testing data set, which we will extract from the 3rd sheet of the Excel spreadsheet to predict a new tibble.\n",
+    "\n",
+    "**Expected outcomes and significance:**\n",
+    "\n",
+    "\n",
+    "We expect the outcome of the study to be that people will generally perform similarly on their exam to individuals with similar user knowledge levels to them based on the visualization. The impact of this finding can allow students to determine how much time they should study for to optimize their time and schedules. This can lead to future questions of if there are other variables that correlate with exam performance and whether or not other variables can also affect user knowledge level.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "da84a171-cb44-4c99-9465-4a638938dc5d",
