--- a/Project.ipynb
+++ b/Project.ipynb
@@ -36,7 +36,7 @@
     "**Preliminary exploratory data analysis:**\n",
     "\n",
     "\n",
-    "We tried plotting performance for goals and related goals against studying efforts - time and repetition. We looked for potential patterns, clusters, like the one above. This is further explained below.\n",
+    "We tried plotting performance for goals and related goals against studying efforts - time and repetition. We looked for potential patterns, clusters, like the ones above. This is further explained below.\n",
     "\n",
     "**Methods:**\n",
     "\n",
